[gd_scene load_steps=11 format=3 uid="uid://dhim1qpe23x0i"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_l8o6r"]
[ext_resource type="Script" path="res://components/TriggerButtonSettings/TriggerButtonSettings.gd" id="2_hui0o"]
[ext_resource type="PackedScene" uid="uid://daxklqm8l01pf" path="res://components/AddShortcutButton/AddShortcutButton.tscn" id="2_renag"]
[ext_resource type="PackedScene" uid="uid://cg60ugredi103" path="res://components/ComponentMethodPicker/ComponentMethodPicker.tscn" id="4_rttbe"]

[sub_resource type="LabelSettings" id="LabelSettings_5lixm"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_kaqjw"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_xd4ix"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_wj4bd"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_isnuq"]
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qs2yx"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TriggerButtonSettings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l8o6r")
script = ExtResource("2_hui0o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Editing Button: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
placeholder_text = "Name"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="ButtonMode" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonMode"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonMode/VBoxContainer"]
layout_mode = 2
text = "Button Mode:"
label_settings = SubResource("LabelSettings_5lixm")

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonMode/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Push"
popup/item_0/id = 1
popup/item_1/text = "Toggle"
popup/item_1/id = 1

[node name="ButtonDown" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonDown"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonDown/VBoxContainer"]
layout_mode = 2
text = "Button Down:"
label_settings = SubResource("LabelSettings_kaqjw")

[node name="ChooseButtonDownMethod" type="Button" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonDown/VBoxContainer"]
layout_mode = 2
text = "Choose"

[node name="ButtonUp" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonUp"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonUp/VBoxContainer"]
layout_mode = 2
text = "Button Up:"
label_settings = SubResource("LabelSettings_xd4ix")

[node name="ChooseButtonUpMethod" type="Button" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonUp/VBoxContainer"]
layout_mode = 2
text = "Choose"

[node name="Feedback" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/Feedback"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/Feedback/VBoxContainer"]
layout_mode = 2
text = "Feedback:"
label_settings = SubResource("LabelSettings_wj4bd")

[node name="ChooseFeedbackMethod" type="Button" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/Feedback/VBoxContainer"]
layout_mode = 2
text = "Choose"

[node name="FeedbackInvertedToggle" type="CheckButton" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/Feedback/VBoxContainer"]
layout_mode = 2
text = "Inverted"
flat = true

[node name="ColorAndDisplay" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2
text = "Color and Display"
label_settings = SubResource("LabelSettings_isnuq")

[node name="BGColor" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/BGColor"]
layout_mode = 2
text = "Background Color: "

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/BGColor"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 10

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2

[node name="Border" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/Border"]
layout_mode = 2
text = "Border:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/Border"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Border Width: "

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Icon: "

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ColorAndDisplay/VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="ExternalInput" type="PanelContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ExternalInput"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ExternalInput/VBoxContainer"]
layout_mode = 2
text = "External Input:"
label_settings = SubResource("LabelSettings_isnuq")

[node name="AddShortcutButton" parent="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ExternalInput/VBoxContainer" instance=ExtResource("2_renag")]
layout_mode = 2
label_text = ""

[node name="ComponentMethodPicker" parent="." instance=ExtResource("4_rttbe")]
visible = false
custom_minimum_size = Vector2(900, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_qs2yx")

[connection signal="pressed" from="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonDown/VBoxContainer/ChooseButtonDownMethod" to="." method="_on_choose_button_down_method_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/ButtonUp/VBoxContainer/ChooseButtonUpMethod" to="." method="_on_choose_button_up_method_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/PanelContainer/VBoxContainer/Feedback/VBoxContainer/ChooseFeedbackMethod" to="." method="_on_choose_feedback_method_pressed"]
[connection signal="cancled" from="ComponentMethodPicker" to="." method="_on_component_method_picker_cancled"]
